# run_drone_config

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
src/: app.py  const.py  fastapi_app.py  router.py  settings.py  utilities.py
src/api/: drone_config.py
src/client/: __init__.py  betaflight.py  firmware.py  wifi_configs.py
src/dataclasess/: __init__.py  binding_phrase.py
src/managers/: __init__.py  firmware.py  wifi_search.py  write_cli.py
src/schemas/: __init__.py  configs.py  general_response.py
src/service/: __init__.py  betaflight_cli.py  file_handler.py  firmware_service.py  http_service.py  wifi_configs.py
